--- a/src/main/metadata/classes/crmasiaDaimlerApacComCustomeridentif.cls
+++ b/src/main/metadata/classes/crmasiaDaimlerApacComCustomeridentif.cls
@@ -79,8 +79,8 @@ public class crmasiaDaimlerApacComCustomeridentif {
         public String Email2_xc;
         public String Email3_xc;
         public String Salutation;
-        public String VIN_xc;
         public String RecordType;
+        public String Vin;
         public crmasiaDaimlerApacComCustomeridentif.Address[] Address_xc;
         private String[] Id_type_info = new String[]{'Id','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'0','1','true'};
         private String[] FirstName_type_info = new String[]{'FirstName','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'0','1','true'};
@@ -99,11 +99,11 @@ public class crmasiaDaimlerApacComCustomeridentif {
         private String[] Email2_xc_type_info = new String[]{'Email2__c','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'0','1','true'};
         private String[] Email3_xc_type_info = new String[]{'Email3__c','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'0','1','true'};
         private String[] Salutation_type_info = new String[]{'Salutation','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'0','1','true'};
-        private String[] VIN_xc_type_info = new String[]{'VIN__c','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'0','1','true'};
         private String[] RecordType_type_info = new String[]{'RecordType','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'1','1','false'};
+        private String[] Vin_type_info = new String[]{'Vin','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'0','1','true'};
         private String[] Address_xc_type_info = new String[]{'Address__c','http://crmasia.daimler-apac.com/CustomerIdentification_1.0',null,'0','-1','false'};
         private String[] apex_schema_type_info = new String[]{'http://crmasia.daimler-apac.com/CustomerIdentification_1.0','true','false'};
-        private String[] field_order_type_info = new String[]{'Id','FirstName','LastName','LastName_Native_1_xc','FirstName_Native_1_xc','PersonBirthdate','LoyaltyCardNo','Individual_Home_Phone_xc','Home_Phone_2_xc','Work_Phone_xc','Phone','Mobile_xc','Mobile2_xc','Email_xc','Email2_xc','Email3_xc','Salutation','VIN_xc','RecordType','Address_xc'};
+        private String[] field_order_type_info = new String[]{'Id','FirstName','LastName','LastName_Native_1_xc','FirstName_Native_1_xc','PersonBirthdate','LoyaltyCardNo','Individual_Home_Phone_xc','Home_Phone_2_xc','Work_Phone_xc','Phone','Mobile_xc','Mobile2_xc','Email_xc','Email2_xc','Email3_xc','Salutation','RecordType','Vin','Address_xc'};
     }
     public class CustomerIdentificationMessageFaultType {
         public String errorCode;
@@ -139,7 +139,6 @@ public class crmasiaDaimlerApacComCustomeridentif {
     }
     public class CustomerIdentificationPort {
         public String endpoint_x = UtilCustomSettings.getWebserviceUrl('EPUrlOnlineDedupValidation');
-        //'https://crm-salesforce-int.mercedes-benz.com/webservices/CustomerIdentification';
         public Map<String,String> inputHttpHeaders_x;
         public Map<String,String> outputHttpHeaders_x;
         public String clientCertName_x;
@@ -153,7 +152,6 @@ public class crmasiaDaimlerApacComCustomeridentif {
             crmasiaDaimlerApacComCustomeridentif.IdentifyCustomerResponse response_x;
             Map<String, crmasiaDaimlerApacComCustomeridentif.IdentifyCustomerResponse> response_map_x = new Map<String, crmasiaDaimlerApacComCustomeridentif.IdentifyCustomerResponse>();
             response_map_x.put('response_x', response_x);
-            System.debug('$%$%$%$%$$'+response_map_x);
             WebServiceCallout.invoke(
               this,
               request_x,
